OO-5341: option to restrict copy/paste in essay